Site's almost done, need to add vid for presenters and fix spacing a bit. Other than that we good

--- a/Consensus Great Brands _ Leading program for rising consumer brands and growth capital_files/style.css
+++ b/Consensus Great Brands _ Leading program for rising consumer brands and growth capital_files/style.css
@@ -399,15 +399,6 @@ img {
     transition: box-shadow .3s;
 }
 
-.logo_wrapper {
-    background:transparent;
-    transition:background 0.5s;
-}
-.logo_wrapper:hover {
-    background: rgba(0,0,0,.7);
-    transition: background 0.5s;
-}
-
 .alignleft {
     float: left;
 }
@@ -4026,7 +4017,7 @@ h1.entry-title {
     .page #secondary, 
     .blog #secondary, 
     .single #secondary {
-        padding-top: 200px;
+        padding-top: 50px;
         padding-bottom: 120px;
     }
     .blog.has-no-hero #primary, 
